--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "leaflet": "^1.7.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
     "tailwindcss": "^4.0.0",
